fix header spacing difference between front and tickets page (#192)

--- a/routes/index/index.css
+++ b/routes/index/index.css
@@ -20,6 +20,9 @@
     h3 {
       margin-bottom: 3rem;
     }
+    .details {
+      margin-top: 1rem;
+    }
   }
 
   #hero {
